welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:7: error: value =- is not a member of Int
      a=-1
       ^